user model & register (Hash / Token / Cookie)

--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,5 @@ CLOUD_NAME=dxqyqyq1y
 API_KEY=  874837483274837
 
 SECRET_KEY= a676b67565c6767a6767d6767f676fe1
+
+SECRET_TOKEN = salallalalallalalalalalall
