--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,7 @@ API_KEY=  874837483274837
 SECRET_KEY= a676b67565c6767a6767d6767f676fe1
 
 SECRET_TOKEN = salallalalallalalalalalall
+
+EMAIL_USERNAME = xeyalxeyal068@gmail.CLOUD_NAME
+
+EMAIL_PASSWORD = xeyal6131
